--- a/api/.env
+++ b/api/.env
@@ -16,7 +16,7 @@
 
 # API Platform distribution
 TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
-TRUSTED_HOSTS=^(localhost|php)$
+TRUSTED_HOSTS=^(localhost|trypandgo-api)$
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
@@ -30,7 +30,8 @@ APP_SECRET=!ChangeMe!
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@database:5432/app?serverVersion=16&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@database:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="${DATABASE_URL}"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
@@ -44,5 +45,6 @@ MERCURE_URL=http://php/.well-known/mercure
 # The public URL of the Mercure hub, used by the browser to connect
 MERCURE_PUBLIC_URL=https://localhost/.well-known/mercure
 # The secret used to sign the JWTs
-MERCURE_JWT_SECRET="!ChangeThisMercureHubJWTSecretKey!"
+# MERCURE_JWT_SECRET="!ChangeThisMercureHubJWTSecretKey!"
+MERCURE_JWT_SECRET="${CADDY_MERCURE_JWT_SECRET}"
 ###< symfony/mercure-bundle ###
