--- a/compose.yaml
+++ b/compose.yaml
@@ -1,20 +1,20 @@
 services:
-  php:
-    image: ${IMAGES_PREFIX:-}app-php
+  trypandgo-api:
+    image: trypandgo-api
     depends_on:
-      - database
+      - trypandgo-db
     restart: unless-stopped
     environment:
-      PWA_UPSTREAM: pwa:3000
-      SERVER_NAME: ${SERVER_NAME:-localhost}, php:80
-      MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
-      MERCURE_SUBSCRIBER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
-      TRUSTED_PROXIES: ${TRUSTED_PROXIES:-127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16}
-      TRUSTED_HOSTS: ${TRUSTED_HOSTS:-^${SERVER_NAME:-example\.com|localhost}|php$$}
-      DATABASE_URL: postgresql://${POSTGRES_USER:-app}:${POSTGRES_PASSWORD:-!ChangeMe!}@database:5432/${POSTGRES_DB:-app}?serverVersion=${POSTGRES_VERSION:-16}&charset=${POSTGRES_CHARSET:-utf8}
-      MERCURE_URL: ${CADDY_MERCURE_URL:-http://php/.well-known/mercure}
-      MERCURE_PUBLIC_URL: ${CADDY_MERCURE_PUBLIC_URL:-https://${SERVER_NAME:-localhost}/.well-known/mercure}
-      MERCURE_JWT_SECRET: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
+      PWA_UPSTREAM: trypandgo-client:3000
+      SERVER_NAME: ${SERVER_NAME}, trypandgo-api:80
+      MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET}
+      MERCURE_SUBSCRIBER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET}
+      TRUSTED_PROXIES: ${TRUSTED_PROXIES}
+      TRUSTED_HOSTS: ${TRUSTED_HOSTS}
+      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?serverVersion=${POSTGRES_VERSION}&charset=${POSTGRES_CHARSET}
+      MERCURE_URL: ${CADDY_MERCURE_URL}
+      MERCURE_PUBLIC_URL: ${CADDY_MERCURE_PUBLIC_URL}
+      MERCURE_JWT_SECRET: ${CADDY_MERCURE_JWT_SECRET}
     volumes:
       - caddy_data:/data
       - caddy_config:/config
@@ -32,19 +32,19 @@ services:
         published: ${HTTP3_PORT:-443}
         protocol: udp
 
-  pwa:
-    image: ${IMAGES_PREFIX:-}app-pwa
+  trypandgo-client:
+    image: trypandgo-client
     environment:
-      NEXT_PUBLIC_ENTRYPOINT: http://php
+      NEXT_PUBLIC_ENTRYPOINT: http://trypandgo-api
 
 ###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-16}-alpine
+  trypandgo-db:
+    image: postgres:${POSTGRES_VERSION}-alpine
     environment:
-      - POSTGRES_DB=${POSTGRES_DB:-app}
+      - POSTGRES_DB=${POSTGRES_DB}
       # You should definitely change the password in production
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-!ChangeMe!}
-      - POSTGRES_USER=${POSTGRES_USER:-app}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=${POSTGRES_USER}
     volumes:
       - db_data:/var/lib/postgresql/data
       # you may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
