--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@api-platform/admin": "^3.4.7",
     "@fontsource/poppins": "^5.0.14",
     "@tailwindcss/forms": "^0.5.7",
+    "@tremor/react": "^3.17.2",
     "formik": "^2.4.6",
     "isomorphic-unfetch": "^4.0.2",
     "next": "^14.2.3",
