--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@api-platform/admin": "^3.4.7",
     "@fontsource/poppins": "^5.0.14",
-    "@tailwindcss/forms": "^0.5.7",
+    "@headlessui/react": "^2.0.4",
+    "@headlessui/tailwindcss": "^0.2.1",
+    "@remixicon/react": "^4.2.0",
     "@tremor/react": "^3.17.2",
     "formik": "^2.4.6",
     "isomorphic-unfetch": "^4.0.2",
@@ -24,13 +26,14 @@
   "devDependencies": {
     "@babel/core": "^7.24.6",
     "@popperjs/core": "^2.11.8",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   },
   "peerDependencies": {
