--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.0.4",
     "@headlessui/tailwindcss": "^0.2.1",
     "@remixicon/react": "^4.2.0",
+    "@tanstack/react-query": "^5.45.1",
     "@tremor/react": "^3.17.2",
     "formik": "^2.4.6",
     "isomorphic-unfetch": "^4.0.2",
