--- a/client/package.json
+++ b/client/package.json
@@ -14,15 +14,14 @@
     "@headlessui/react": "^2.0.4",
     "@headlessui/tailwindcss": "^0.2.1",
     "@remixicon/react": "^4.2.0",
-    "@tanstack/react-query": "^5.45.1",
+    "@tanstack/react-query": "5.45.1",
     "@tremor/react": "^3.17.2",
     "formik": "^2.4.6",
     "isomorphic-unfetch": "^4.0.2",
     "next": "^14.2.3",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-query": "^3.39.3"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6",
@@ -41,5 +40,5 @@
     "@babel/core": "^7.19.0",
     "@popperjs/core": "^2.11.6"
   },
-  "packageManager": "pnpm@9.1.3+sha512.7c2ea089e1a6af306409c4fc8c4f0897bdac32b772016196c469d9428f1fe2d5a21daf8ad6512762654ac645b5d9136bb210ec9a00afa8dbc4677843ba362ecd"
+  "packageManager": "pnpm@9.3.0+sha512.ee7b93e0c2bd11409c6424f92b866f31d3ea1bef5fbe47d3c7500cdc3c9668833d2e55681ad66df5b640c61fa9dc25d546efa54d76d7f8bf54b13614ac293631"
 }
